@@ -102,7 +102,9 @@ X10_Initialize($)
   $hash->{DefFn}     = "X10_Define";
   $hash->{UndefFn}   = "X10_Undef";
   $hash->{ParseFn}   = "X10_Parse";
-  $hash->{AttrList}  = "IODev follow-on-for-timer:1,0 do_not_notify:1,0 dummy:1,0 showtime:1,0 model:lm12,lm15,am12,tm13 loglevel:0,1,2,3,4,5,6";
+  $hash->{AttrList}  = "IODev follow-on-for-timer:1,0 do_not_notify:1,0 " .
+                       "dummy:1,0 showtime:1,0 model:lm12,lm15,am12,tm13 " .
+                       "loglevel:0,1,2,3,4,5,6";
 
 }
 
